Analytics Tag Test

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 html,body {
 
-  background:center no-repeat fixed url('/images/Placeholder.jpg');
+  background:center no-repeat fixed url('../images/Placeholder.jpg');
 
   background-size: cover;
 
